# bwi_experimental

bwi_nav2d/: CMakeLists.txt  README.md  package.xml
bwi_nav2d/bash/: console.sh  killall.sh  multi-agent-mapper.sh  single-agent-mapper.sh
bwi_nav2d/launch/: 3ne.launch  multiple_segbots.launch  nav2d_mapper_krr2014.launch  nav2d_mapper_krr2014.launch~  nav2d_mapper_krr2014_multi.launch  nav2d_operator_krr2014.launch  rviz.launch  segbot_mobile_base.launch
bwi_nav2d/param/: costmap.yaml  mapper.yaml  nav_eband.rviz  nav_eband_multi.rviz  navigator.yaml  navigator.yaml~  operator.yaml  operator.yaml~  operator_slow.yaml
bwi_nav2d/params/: mapper.rviz  ros.yaml
bwi_nav2d/scripts/: teleop_twist_keyboard
bwi_nav2d/src/: auto_localize_robot.cpp  emulate_joy.cpp  joy_emulator.cpp  windowed_sim_joy.cpp
bwi_nav2d/srv/: AutoLocalizeRobot.srv
bwi_nav2d/worlds/: 3ne.world
